disabled button for frequency controller demo because of loggin issues. removed some unnecessearry comments. removed the use of "root" in the .css and moved the styles to "html, body" in hopes of fixing the issue of styling not being applied on iOS and embeded viewings.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,18 +1,3 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 a {
   font-weight: 500;
   color: #ffffff;
@@ -82,4 +67,29 @@ button:focus-visible {
 .center-button {
   align-self: center;
   width: auto;
+}
+
+.disabled {
+  background-color: #5a5a5a;
+  pointer-events: none;
+  cursor: not-allowed;
+  opacity: 0.7;     
+}
+
+.disabled:hover {
+  background-color: #5a5a5a; 
+  transform: none;       
+  box-shadow: none;
+}
+
+.button-with-note {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.note {
+  margin: 0;
+  font-size: 1.1rem;
+  color: #ff0000;
 }
